--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   </parent>
 
   <artifactId>promoted-builds</artifactId>
-  <version>2.26-SNAPSHOT</version>
+  <version>2.26.bb-SNAPSHOT</version>
   <packaging>hpi</packaging>
 
   <name>Jenkins promoted builds plugin</name>
@@ -35,9 +35,9 @@
   </developers>
 
   <scm>
-    <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
-    <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
-    <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
+    <connection>scm:git:git://github.com/blackbaud/${project.artifactId}-plugin.git</connection>
+    <developerConnection>scm:git:git@github.com:blackbaud/${project.artifactId}-plugin.git</developerConnection>
+    <url>https://github.com/blackbaud/${project.artifactId}-plugin</url>
     <tag>HEAD</tag>
   </scm>
   <licenses>
