--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   </parent>
 
   <artifactId>promoted-builds</artifactId>
-  <version>2.26.bb-SNAPSHOT</version>
+  <version>2.26.bb</version>
   <packaging>hpi</packaging>
 
   <name>Jenkins promoted builds plugin</name>
@@ -38,7 +38,7 @@
     <connection>scm:git:git://github.com/blackbaud/${project.artifactId}-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:blackbaud/${project.artifactId}-plugin.git</developerConnection>
     <url>https://github.com/blackbaud/${project.artifactId}-plugin</url>
-    <tag>HEAD</tag>
+    <tag>promoted-builds-2.26.bb</tag>
   </scm>
   <licenses>
     <license>
